--- a/project2/package.json
+++ b/project2/package.json
@@ -18,12 +18,14 @@
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
+    "@angular/material": "^2.0.0-beta.12",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
+    "ng2-modal-dialog": "^2.3.8",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
